[package]
name = "libvale"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.2.1", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
flate2 = "1.0.25"
tar = "0.4.38"
zip-extract = "0.1.2"
octocrab = "0.23.0"
patch = "0.7.0"
